-new name for includes header/footer -navbar desktop & navbar mobile + menu burger OK

--- a/package.json
+++ b/package.json
@@ -10,5 +10,5 @@
   },
   "author": "Gael, Lucas",
   "license": "ISC",
-  "description": ""
+  "description": "Brief-Four, the project for CDA formation"
 }
